--- a/test/Object.html
+++ b/test/Object.html
@@ -17,5 +17,5 @@
     <title>Scene</title>
 </head>
 <body></body>
-<script src="./Scene.js" type="module"></script>
+<script src="./Object.js" type="module"></script>
 </html>
