Rainbow generation algorithm
- Add rainbow vertex shader
- Fix the shift of the handle when the cycloid is generated
- Separate the buffer used by the rainbow
- Optimize the number of vertices of the stars

--- a/test/Object.html
+++ b/test/Object.html
@@ -14,7 +14,7 @@
             height: 100vh;
         }
     </style>
-    <title>Scene</title>
+    <title>Scene Object</title>
 </head>
 <body></body>
 <script src="./Object.js" type="module"></script>
